--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* 
-$bleu: #0065FC;
+$bleu: #{0}065FC;
 $bleuclair: #DEEBFF;
 $gris: #F2F2F2;
  */
@@ -10,10 +10,9 @@ $gris: #F2F2F2;
   }
 
 
-  body {
-      margin-left: 50px;
-      margin-top: 0px;
-  };
+.margin-left {
+    margin-left: 50px !important;
+}
 
 .box-shadow {
     -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); 
@@ -26,7 +25,6 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 
 .bold {
     font-weight: bold;
-    font-size: 18px;
 }
 
 .raleway {
@@ -123,8 +121,9 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
     background-color: #0065FC;
     border: none;
     color: white;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+    padding: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .icone {
@@ -140,35 +139,52 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 
 .filtre {
     margin-top: 2%;
-    height: 40px;
+    height: 20%;
     width: 60%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.filtre-bordure {
-    width: 15%;
-    border: 2px solid #F2F2F2;
+.border-grey {
+    border: 2px solid grey;
     border-radius: 20px;
 }
 
+
 .logo-filtre {
     background-color: #DEEBFF;
+    padding: 9px;
+    border-radius: 20px;
+    border-right: 2px solid grey;
+    color: #0065FC;
 }
 
 .text-filtre {
     margin: auto;
+    padding: 8px;
+    margin-left: 5%;
 }
 
 .nb-logements {
     font-size: 12px;
 }
 
+.logo-info {
+    margin-right: 20px;
+    color: blue;
+    padding: 5px;
+    border: 2px solid #DEEBFF;
+    border-radius: 50px;
+}
+
 .bloc-hebergements {
-    width: 100%;
+    margin: 0 auto;
+    width: 95%;
     height: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .stars {
@@ -189,7 +205,7 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 }
 
 .bloc-populaire {
-    width: 25%;
+    width: 30%;
 }
 .bloc-ville, .bloc-populaire {
     background-color: #F2F2F2;
@@ -205,10 +221,18 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
     margin-bottom: 10px;
 }
 
+.popu-box {
+    height: 90%;
+}
+
 .img-popu {
-    height: 250px;
-    width: 70%;
+    height: 100%;
+    width: 40%;
     border-radius: 20px;
+}
+
+.popu-txt {
+    line-height: 18px;
 }
 
 .carre-01 {
@@ -229,10 +253,9 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 .carre-02 {
     background-color: white;
     border-radius: 20px;
-    height: 30%;
-    width: 450px;
+    height: 25%;
+    width: 90%;
     min-width: 300px;
-    max-height: 500px;
     padding: 5px;
     display: flex;
     flex-direction: row;
@@ -244,6 +267,8 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 .text-02 {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    margin-left: 4%;
 }
 
 .text-03 {
@@ -256,12 +281,14 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 }
 
 .footer {
+    display: flex;
+    justify-content: center;
     background-color: #F2F2F2;
+    width: 100%;
 }
 
 .columns {
-    margin: 0 auto;
-    width: 80%;
+    width: 70%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -274,102 +301,209 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 }
 
 .bloc-activite {
-    height: 500px;
+    height: 60%;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .box-activite {
     height: 100%;
+    display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
-
-.box-general {
-    width: 23%;
-    border-radius: 20px;
-    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); 
-    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
-}
-
 .text-acti {
     margin: 0;
-    margin-top: 1%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     margin-left: 5%;
 }
 
 .box-high {
     height: 90%;
+    min-width: 300px;
 }
 
 .box-small {
     height: 45%;
+    min-width: 300px;
 }
 
 .img-port {
-    height: 90%;
+    height: 500px;
     width: 100%;
 }
 
 .double-box {
-    height: 90%;
+    height: 50%;
     width: 23%;
+    min-width: 300px;
     display: flex;
     justify-content: space-between;
 }
 
-.box-fort {
-    height: 60%;
-    width: 100%;
-}
-
-.box-iles {
-    height: 35%;
-    width: 100%;
-}
-
-.img-fort {
-    height: 80%;
-    width: 100%;
-}
-
-.img-iles {
-    height: 70%;
-    width: 100%;
-}
-
-.box-parc {
-    height: 90%;
-    width: 20%;
-}
-
-.img-parc {
-    height: 90%;
-    width: 100%;
-}
-
-.box-dame {
-    height: 47%;
-    width: 100%;
-}
-
-.img-dame {
-    height: 80%;
-    width: 100%;
-}
-
-.box-longchamp {
-    height: 47%;
-    width: 100%;
-}
-
-.img-longchamp {
-    height: 80%;
-    width: 100%;
-}
-
 .link-box {
     line-height: 20px;
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
 }
 .link {
     text-decoration: none;
     color: black;
+}
+
+@media (max-width: 600px) {
+
+    .bloc-ville {
+        width: 100%;
+        background-color: white;
+    }
+
+    .bloc-populaire{
+        width: 100%;
+    }
+
+    .margin-top-media {
+        margin-top: 5%;
+    }
+
+    .hide-media {
+        display: none;
+    }
+
+    .margin-top-img {
+        margin-top: 10px;
+    }
+
+    .link-box {
+        flex-direction: column;
+    }
+
+    .columns {
+        flex-direction: column;
+    }
+
+    .margin-left {
+        margin-left: 0px !important;
+    }
+
+    .margin-left-media {
+        margin-left: 0px !important;
+    }
+
+    .body {
+        margin: 0px !important;
+    }
+
+    .footer {
+        margin: 0;
+        margin-top: 5%;
+    }
+
+}
+
+.box-general {
+    width: 95%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.box-general2 {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.column-solo {
+       width: 23%;
+    height: 400px;
+    border-radius: 20px;
+    min-width: 300px;
+}
+
+.column-duo {
+    display: flex;
+    flex-direction: column;
+    width: 23%;
+    height: 410px;
+    min-width: 300px;
+}
+
+.box-port {
+    background-image: url("./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
+    height: 90%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.box-parc {
+    background-image: url("./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
+    height: 90%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.inside-column {
+    height: 50%;
+    border-radius: 20px;
+    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3); 
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3)
+}
+
+.border-radius-top {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.box-fort {
+    background-image: url("./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 80%;
+}
+
+.box-iles {
+    background-image: url("./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
+    width: 100%;
+    height: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.box-dame {
+    background-image: url("./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
+    width: 100%;
+    height: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.box-long {
+    background-image: url("./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
+    width: 100%;
+    height: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.margin-top-box {
+    margin-top: 20px;
+}
+
+.txt {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    font-weight: bold;
+    padding: 10px;
+    margin-left: 10px;
+}
+
+.box-shadow {
+    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3); 
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3)
 }
