--- a/style.css
+++ b/style.css
@@ -151,12 +151,47 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
     top: 0;
     width: 18%;
     margin: 0px;
+    margin-right: 3%;
     justify-content: space-between;
+    border: 2px solid white;
 }
+
+.display-mobile {
+    display: none;
+    margin: 4% 0;
+}
+
+.no-decoration {
+    text-decoration: none;
+}
+
+.heber-mobile {
+    border-bottom: 2px solid grey;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+.heber-mobile :hover {
+    color: #0065FC;
+    border-color: #0065FC
+}
+
+.acti-mobile {
+    border-bottom: 2px solid grey;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+
+}
+
 
 .inscription {
     font-weight: bold;
     right: 0;
+    color: #0065FC
 }
 
 .hover:hover {
@@ -406,10 +441,38 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
     color: black;
 }
 
+@media (max-width: 1030px) {
+    .bloc-ville {
+        width: 100%;
+    }
+
+    .bloc-populaire {
+        width: 100%;
+        margin-top: 5%;
+    }
+
+    .column-duo {
+        margin-top: 10px;
+    }
+
+    .test1 {
+        width: 90%;
+    }
+
+    #box-mouettes {
+        margin-top: 5%;
+    }
+
+}
+
 @media (max-width: 600px) {
 
     body {
         margin: 0;
+    }
+
+    .display-mobile {
+        display: flex;
     }
 
     .bloc-ville {
@@ -468,6 +531,14 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+    }
+
+    .recherche {
+        width: 300px;
+    }
+
+    .input {
+        width: 150px;
     }
 }
 
