--- a/style.css
+++ b/style.css
@@ -13,13 +13,21 @@ $gris: #F2F2F2;
       margin: 0px;
   }
 
+  h1 {
+    font-size: 25px;
+  }
+
+  h2 {
+      font-size: 20px;
+  }
+
 .margin-left {
     margin-left: 50px !important;
 }
 
 .box-shadow {
-    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); 
-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
+    /* -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); 
+box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); */
 }
 
 .margin-top {
@@ -93,13 +101,14 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 
 .test4 {
     border-radius: 20px;
-    border: 2px solid grey;
+    border: 2px solid #F2F2F2;
     margin-top: 10px;
 }
 
 .test7 :hover, .test5 :hover {
     background-color: #0065FC;
     color: white;
+    cursor: pointer;
 }
 
 .test9 {
@@ -205,6 +214,7 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 .recherche {
     width: 40%;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .icone {
@@ -332,8 +342,8 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
     display: flex;
     flex-direction: column;
     line-height: 5px;
-    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3); 
-    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2);
+    box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2);
 }
 
 
@@ -347,8 +357,8 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
     display: flex;
     flex-direction: row;
     line-height: 5px;
-    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3); 
-    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2);
+    box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2)
 }
 
 .text-02 {
@@ -451,6 +461,11 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
         margin-top: 5%;
     }
 
+    .carre-02 {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .column-duo {
         margin-top: 10px;
     }
@@ -479,6 +494,10 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
         display: flex;
     }
 
+    .heber-box {
+        justify-content: center;
+    }
+
     .bloc-ville {
         width: 100%;
         background-color: white;
@@ -487,6 +506,16 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
     .bloc-populaire{
         width: 100%;
         border-radius: 0px;
+    }
+
+    .popu-box {
+        display: flex;
+        justify-content: center;
+    }
+
+    .carre-02 {
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .bloc-hebergements {
@@ -593,8 +622,8 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5);
 .inside-column {
     height: 50%;
     border-radius: 20px;
-    -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3); 
-    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3)
+    -webkit-box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2); 
+    box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2)
 }
 
 .border-radius-top {
