adjust inscription iphone 8

--- a/style.css
+++ b/style.css
@@ -25,11 +25,6 @@ $gris: #F2F2F2;
     margin-left: 50px !important;
 }
 
-.box-shadow {
-    /* -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); 
-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); */
-}
-
 .margin-top {
     margin-top: 5%;
 }
@@ -496,6 +491,10 @@ box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.5); */
 
     .heber-box {
         justify-content: center;
+    }
+
+    .liens {
+        width: 20%;
     }
 
     .bloc-ville {
