--- a/style.css
+++ b/style.css
@@ -75,28 +75,28 @@ $gris: #F2F2F2;
     margin: auto 0;
 }
 
-.test1 {
+.filtres {
     width: 40%;
     display: flex;
     flex-direction: row;
 }
 
-.test2 {
+.box-filtres {
     margin: auto 0;
     margin-right: 30px;
 }
 
-.test3 {
+.text-filtre {
     margin: auto 10px;
 }
 
-.test4 {
+.indiv-filtre {
     border-radius: 20px;
     border: 2px solid #F2F2F2;
     margin-top: 10px;
 }
 
-.test7 :hover, .test5 :hover {
+.width-filtre :hover, .small-filtre-icon :hover {
     background-color: #0065FC;
     color: white;
     cursor: pointer;
@@ -108,17 +108,12 @@ $gris: #F2F2F2;
     margin: auto 0;
 }
 
-/* .test4 :hover {
-    background-color: #DEEBFF;
-    color: #0065FC
-} */
-
 .test3 :hover {
     background-color: #0065FC;
     color: white;
 }
 
-.test5 {
+.small-filtre-icon {
     margin: auto;
     padding: 8px;
     background-color: #DEEBFF;
@@ -126,7 +121,7 @@ $gris: #F2F2F2;
     color: #0065FC;
 }
 
-.test6 {
+.wide-filtre-icon {
     margin: auto;
     padding: 8px 14px;
     background-color: #DEEBFF;
@@ -134,7 +129,7 @@ $gris: #F2F2F2;
     color: #0065FC;
 }
 
-.test7 {
+.width-filtre {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -473,6 +468,12 @@ $gris: #F2F2F2;
         width: 40%;
     }
 
+    .filtres {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+    }
+
 }
 
 @media (max-width: 600px) {
@@ -483,6 +484,12 @@ $gris: #F2F2F2;
 
     .display-mobile {
         display: flex;
+    }
+
+    .filtres {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
     }
 
     .heber-box {
@@ -584,7 +591,7 @@ $gris: #F2F2F2;
 }
 
 .column-solo {
-       width: 23%;
+    width: 23%;
     height: 400px;
     border-radius: 20px;
     min-width: 300px;
