--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
-/* 
-$bleu: #{0}065FC;
-$bleuclair: #DEEBFF;
-$gris: #F2F2F2;
- */
-
  @font-face {
     font-family: "Raleway";
-    src: url("/Fonts/static/Raleway-Light.ttf");
+    src: url("./Fonts/static/Raleway-Light.ttf");
   }
 
   body {
@@ -22,7 +16,7 @@ $gris: #F2F2F2;
   }
 
 .margin-left {
-    margin-left: 50px !important;
+    margin-left: 50px;
 }
 
 .margin-top {
@@ -31,6 +25,7 @@ $gris: #F2F2F2;
 
 .margin-top-p {
     margin-top: 10px;
+    line-height: 25px;
 }
 
 .bold {
@@ -73,6 +68,7 @@ $gris: #F2F2F2;
 }
 
 .hebergement {
+    display: flex;
     text-decoration: none;
     color: black;
     font-family: "Raleway";
@@ -142,13 +138,17 @@ $gris: #F2F2F2;
 
 .logo {
     margin-top: 10px;
+    margin-left: 50px;
+}
+
+.logo-img {
     height: 35px;
     width: 70px;
 }
 
 .liens {
     top: 0;
-    width: 18%;
+    width: 25%;
     margin: 0px;
     margin-right: 3%;
     justify-content: space-between;
@@ -194,7 +194,7 @@ $gris: #F2F2F2;
 
 .hover:hover {
     color:  #0065FC;
-};
+}
 
 .mid-text {
     line-height: 3px;
@@ -266,11 +266,12 @@ $gris: #F2F2F2;
 }
 
 .bloc-hebergements {
+    display: flex;
+    flex-direction: row;
     margin: 0 auto;
     width: 95%;
     height: 100%;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .stars {
@@ -309,7 +310,7 @@ $gris: #F2F2F2;
 }
 
 .popu-box {
-    height: 90%;
+    height: 85%;
 }
 
 .img-popu {
@@ -332,6 +333,7 @@ $gris: #F2F2F2;
     display: flex;
     flex-direction: column;
     line-height: 5px;
+    margin: 5px;
     -webkit-box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2);
     box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2);
 }
@@ -342,7 +344,7 @@ $gris: #F2F2F2;
     border-radius: 20px;
     height: 25%;
     width: 90%;
-    min-width: 300px;
+    /* min-width: 250px; */
     padding: 5px;
     display: flex;
     flex-direction: row;
@@ -463,34 +465,27 @@ $gris: #F2F2F2;
     height: 400px;
     border-radius: 20px;
     min-width: 300px;
+    margin: 10px;
 }
 
 .column-duo {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 23%;
     height: 400px;
     min-width: 300px;
+    margin: 10px
 }
 
-.box-port {
-    background-image: url("./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
+.box-image-solo {
     height: 90%;
     width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.box-parc {
-    background-image: url("./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
-    height: 90%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
+    object-fit: cover;
 }
 
 .inside-column {
-    height: 50%;
+    height: 47%;
     border-radius: 20px;
     -webkit-box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2); 
     box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.2)
@@ -501,36 +496,10 @@ $gris: #F2F2F2;
     border-top-right-radius: 20px;
 }
 
-.box-fort {
-    background-image: url("./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
+.box-image-duo {
     width: 100%;
     height: 80%;
-}
-
-.box-iles {
-    background-image: url("./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
-    width: 100%;
-    height: 80%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.box-dame {
-    background-image: url("./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
-    width: 100%;
-    height: 80%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.box-long {
-    background-image: url("./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
-    width: 100%;
-    height: 80%;
-    background-repeat: no-repeat;
-    background-position: center;
+    object-fit: cover;
 }
 
 .margin-top-box {
@@ -541,8 +510,9 @@ $gris: #F2F2F2;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     font-weight: bold;
-    padding: 10px;
+    padding: 5px;
     margin-left: 10px;
+    margin-top: 0px;
 }
 
 .box-shadow {
@@ -550,64 +520,47 @@ $gris: #F2F2F2;
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.3)
 }
 
-.amina {
-    background-image: url("./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
-}
-
-.le-panier {
-    background-image: url('./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg');
-}
-
-.hotel-de-la-mer {
-    background-image: url('./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg');
-}
-
-.les-mouettes {
-    background-image: url('./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg');
-}
-
-.hotel-du-port {
-    background-image: url('./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg');
-}
-
-.cannebiere {
-    background-image: url('./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg ');
-}
-
-.soleil-du-matin {
-    background-image: url('./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg');
-}
-
-.coeur-de-leau {
-    background-image: url('./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg');
-}
-
-.bleu-et-blanc {
-    background-image: url('./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg');
-}
-
 .img-hebergement {
     width: 100%;
     height: 65%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    object-fit: cover;
 }
 
 .img-populaire {
     height: 100%;
     width: 40%;
     border-radius: 20px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    object-fit: cover;
 }
 
-@media (max-width: 1030px) {
+@media (max-width: 1570px) {
+    .bloc-hebergements {
+        flex-wrap: wrap;
+    }
     .bloc-ville {
         width: 100%;
+    }
+
+    .bloc-populaire {
+        width: 45%;
+        margin: 10px auto;
+    }
+
+    .carre-02 {
+        height: 150px;
+    }
+}
+
+@media (max-width: 1060px) {
+    .bloc-ville {
+        width: 100%;
+    }
+
+    .carre-01 {
+        width: 40%;
+        margin: 2% auto;
     }
 
     .bloc-populaire {
@@ -628,10 +581,6 @@ $gris: #F2F2F2;
         width: 90%;
     }
 
-    #box-mouettes {
-        margin-top: 5%;
-    }
-
     .liens {
         width: 40%;
     }
@@ -646,8 +595,13 @@ $gris: #F2F2F2;
 
 @media (max-width: 600px) {
 
-    body {
-        margin: 0;
+    .bloc-hebergements {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .box-image-solo {
+        height: 85%;
     }
 
     .display-mobile {
@@ -671,11 +625,13 @@ $gris: #F2F2F2;
     .bloc-ville {
         width: 100%;
         background-color: white;
+        order: 2;
     }
 
     .bloc-populaire{
         width: 100%;
         border-radius: 0px;
+        order: 1;
     }
 
     .popu-box {
@@ -683,22 +639,9 @@ $gris: #F2F2F2;
         justify-content: center;
     }
 
-    .carre-02 {
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .carre-01 {
-        height: 220px;
-    }
-
-
     .bloc-hebergements {
+        flex-direction: row-reverse;
         width: 100%;
-    }
-
-    .margin-top-media {
-        margin-top: 5%;
     }
 
     .hide-media {
@@ -718,15 +661,15 @@ $gris: #F2F2F2;
     }
 
     .margin-left {
-        margin-left: 5% !important;
+        margin-left: 5%;
+    }
+
+    .logo {
+        margin-left: 5%;
     }
 
     .margin-left-media {
-        margin-left: 0px !important;
-    }
-
-    .body {
-        margin: 0px !important;
+        margin-left: 0px;
     }
 
     .footer {
@@ -743,15 +686,15 @@ $gris: #F2F2F2;
     }
 
     .column-solo {
-        height: 200px !important;
+        height: 200px;
     }
 
     .box-port {
-        height: 80% !important;
+        height: 80%;
     }
 
     .box-parc {
-        height: 80% !important;
+        height: 80%;
     }
 
     .img-hebergement {
