--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@
 }
 
 .header {
+    display: flex;
+    flex-direction: row;
     top: 0;
     margin-top: 0px;
     justify-content: space-between;
@@ -72,7 +74,7 @@
     text-decoration: none;
     color: black;
     font-family: "Raleway";
-    margin: auto 0;
+    margin: auto 5px;
 }
 
 .filtres {
@@ -113,6 +115,13 @@
     color: white;
 }
 
+.box-liens {
+    display: flex;
+    flex-direction: row;
+    width: 300px;
+    justify-content: space-around;
+}
+
 .small-filtre-icon {
     margin: auto;
     padding: 8px;
@@ -137,6 +146,7 @@
 }
 
 .logo {
+    position: absolute;
     margin-top: 10px;
     margin-left: 50px;
 }
@@ -148,10 +158,9 @@
 
 .liens {
     top: 0;
-    width: 25%;
+    width: 100%;
     margin: 0px;
-    margin-right: 3%;
-    justify-content: space-between;
+    justify-content: flex-end;
     border: 2px solid white;
 }
 
@@ -186,10 +195,14 @@
 
 }
 
+.box-inscription {
+    width: 150px;
+    text-align: center;
+}
+
 .inscription {
     font-weight: bold;
-    right: 0;
-    color: #0065FC
+    color: #0065FC;
 }
 
 .hover:hover {
@@ -581,10 +594,6 @@
         width: 90%;
     }
 
-    .liens {
-        width: 40%;
-    }
-
     .filtres {
         display: flex;
         flex-direction: column;
@@ -594,6 +603,19 @@
 }
 
 @media (max-width: 600px) {
+
+    .box-inscription {
+        order: 1;
+    }
+
+    .box-liens {
+        order: 2;
+        border-bottom: 2px solid gray;
+    }
+
+    .hebergement {
+        padding-bottom: 10px;
+    }
 
     .bloc-hebergements {
         display: flex;
@@ -619,7 +641,13 @@
     }
 
     .liens {
-        width: 20%;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .box-liens {
+        width: 100%;
     }
 
     .bloc-ville {
@@ -644,9 +672,6 @@
         width: 100%;
     }
 
-    .hide-media {
-        display: none;
-    }
 
     .margin-top-img {
         margin-top: 10px;
